# 104779-internet_programming

./: .gitignore  104779-internet_programming.code-workspace  LICENSE  README.md  internet-programming.drawio
exams/2024/06-13/solution/: README.md  app.py  auth.py  db.py  error.py  init_data.py  main.py  model.dbml  model.py  pyproject.toml  yatms.db
exams/2024/06-13/solution/admin/: category.py  tag.py  task.py  task_tag.py  user.py
exams/2024/06-13/solution/me/: category.py  tag.py  task.py  task_tag.py  user.py
exams/2024/06-13/solution/tests/: me-category.http  me-tag.http  me-task.http
exams/2024/07-05/solution/: README.md  app.py  auth.py  config.py  conftest.py  db.py  error.py  init_data.py  log.py  main.py  model.dbml  model.py  pyproject.toml  test_app.py  test_yawms.py  utils.py  yawms.db  yawms.py  yawms_init_data.py
exams/2024/07-05/solution/admin/: category.py  command.py  command_tag.py  tag.py  user.py  workflow.py  workflow_command.py
exams/2024/07-05/solution/me/: __init__.py  category.py  command.py  command_tag.py  tag.py  user.py  workflow.py  workflow_command.py
exams/2024/07-05/solution/test/: config.py  conftest.py  test_api.py  utils.py
exams/2024/07-05/solution/test_data/category/: create-NC.json  create.json  update-NC-NF.json  update-NC.json  update-NF.json
exams/2024/07-05/solution/test_data/command/: create-NC-category-NF.json  create-NC-workflow-NF.json  create-NC-workflow-category-NF.json  create-NC.json  create-category-NF.json  create-workflow-NF.json  create-workflow-category-NF copy.json  create.json  update-NC.json  (+5 more)
(+221 files in other folders)
