[tool.poetry]
name = "internet-programming-104779-exam-2024-07-05"
version = "0.1.0"
description = "Yet Another Workflow Management System"
authors = ["Alex Carrega <alessandro.carrega@unige.it>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bcrypt = "^4.1.3"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
PyJWT = "^2.8.0"
passlib = "^1.7.4"
pytest = "^8.2.2"
funcy = "^2.0"
requests = "^2.32.3"
pytest-order = "^1.2.1"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
